--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.0.2",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.4.0",
+    "astro-compress": "^2.2.0",
+    "astro-robots-txt": "^1.0.0",
     "tailwindcss": "^3.3.5"
   }
 }
